--- a/templates/index.html
+++ b/templates/index.html
@@ -2,3 +2,8 @@
 <h1>Tervetuloa!</h1>
 <p>
 Olet sivuston {{ counter }}. käyttäjä
+
+<a href="/login">Kirjaudu sisään</a>
+<a href="/register">Luo uusi käyttäjätunnus</a>
+
+
