--- a/templates/login.html
+++ b/templates/login.html
@@ -5,9 +5,11 @@ Anna käyttäjätunnus:
 <input type="text" name="name">
 <br>
 Anna salasana:
-<input type="text" name="password">
+<input type="password" name="password">
 <br>
 <input type="submit" value="Kirjaudu">
 <br>
+<a href="/welcome">siirry seuraavalle sivulle</a>
 <br>
-<input type="submit" value="Luo uusi tunnus">
+<a href="/register">Luo uusi käyttäjätunnus</a>
+
