--- a/templates/register.html
+++ b/templates/register.html
@@ -1,11 +1,12 @@
 <form action="/register" method="POST">
 <h1>Uusi käyttäjätunnus</h1>
 <br>
-Anna nimesi:
+Anna nimimerkki:
 <input type="text" name="name">
 <br>
 Anna salasana:
-<input type="text" name="password">
+<input type="password" name="password">
 <br>
-<input type="submit" value="Luo uusi tunnus">
+<input type="submit" value="Luo tunnus">
+<a href="/welcome">siirry seuraavalle sivulle</a>
 </form>
