--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,8 +1,8 @@
 <p> Tervetuloa! </p>
 <p>Tällä sivulla voit</p>
 <ul>
-<li> siirtyä selaamaan reseptejä
-<li> luoda uuden reseptin
-<li> selata omia suosikkireseptejä
+<li> <a href="/recipes">Siirtyä selaamaan reseptejä</a>
+<li> <a href="/new">Luoda uuden reseptin</a>
+<li> <a href="/favourites">Selata omia suosikkeja</a>
 <li> lisätä tai tutkailla omia tarvikkeita
 </ul>
