Create login functionality

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <h1>Kirjaudu sisään</h1>
 <br>
 Anna käyttäjätunnus:
-<input type="text" name="name">
+<input type="text" name="username">
 <br>
 Anna salasana:
 <input type="password" name="password">
