--- a/templates/register.html
+++ b/templates/register.html
@@ -2,11 +2,16 @@
 <h1>Uusi käyttäjätunnus</h1>
 <br>
 Anna nimimerkki:
-<input type="text" name="name">
+<input type="text" name="username">
 <br>
 Anna salasana:
-<input type="password" name="password">
+<input type="password" name="password1">
+<br>
+Anna salasana uudelleen:
+<input type="password" name="password2">
 <br>
 <input type="submit" value="Luo tunnus">
+<br>
+<br>
 <a href="/welcome">siirry seuraavalle sivulle</a>
 </form>
