--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,16 @@
 <form action="/register" method="POST">
-<h1>Kirjaudu sisään</h1>
-<br>
+<h2>Kirjaudu sisään</h2>
+<p>
 Anna käyttäjätunnus:
 <input type="text" name="username">
-<br>
+<p>
 Anna salasana:
 <input type="password" name="password">
-<br>
+<p>
 <input type="submit" value="Kirjaudu">
-<br>
+</form>
+<p>
 <a href="/welcome">siirry seuraavalle sivulle</a>
-<br>
+<p>
 <a href="/register">Luo uusi käyttäjätunnus</a>
 
