--- a/templates/register.html
+++ b/templates/register.html
@@ -1,17 +1,14 @@
 <form action="/register" method="POST">
-<h1>Uusi käyttäjätunnus</h1>
-<br>
+<p>Uusi käyttäjätunnus</p>
+<p>
 Anna nimimerkki:
 <input type="text" name="username">
-<br>
+<p>
 Anna salasana:
 <input type="password" name="password1">
-<br>
+<p>
 Anna salasana uudelleen:
 <input type="password" name="password2">
-<br>
+<p>
 <input type="submit" value="Luo tunnus">
-<br>
-<br>
-<a href="/welcome">siirry seuraavalle sivulle</a>
 </form>
