Add back to front page -links

--- a/templates/login.html
+++ b/templates/login.html
@@ -13,4 +13,6 @@ Anna salasana:
 <a href="/welcome">siirry seuraavalle sivulle</a>
 <p>
 <a href="/register">Luo uusi käyttäjätunnus</a>
+<p>
+<a href="/">Palaa etusivulle</a>
 
