--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -6,3 +6,6 @@
 <li> <a href="/favourites">Selata omia suosikkeja</a>
 <li> lisätä tai tutkailla omia tarvikkeita
 </ul>
+<p>
+<a href="/">Palaa etusivulle</a>
+
