Fix error redirecting, show error on correct page

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,8 @@
 <form action="/register" method="POST">
 <p>Uusi käyttäjätunnus</p>
 <p>
+{{ error }}
+<p>
 Anna nimimerkki:
 <input type="text" name="username">
 <p>
