--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,8 @@
 <form action="/login" method="POST">
 <h2>Kirjaudu sisään</h2>
 <p>
+{{ error }}
+<p>
 Anna käyttäjätunnus:
 <input type="text" name="username">
 <p>
