--- a/templates/new.html
+++ b/templates/new.html
@@ -11,14 +11,9 @@ valmistusaika:
 <br>
 <input type="number" name="passive" placeholder="passiivinen">
 <br>
-Ainekset:
-<br>
-<p>Sanaparit:<br>
-    <textarea name="incredients" rows="8" cols="40" maxlength="10000">
-    1-apina-monkey
-    1-banaani-banana
-    1-cembalo-harpsichord
-    </textarea></p>
+<p>Ainekset:<br>
+<textarea name="incredients" rows="8" cols="40" maxlength="10000">
+</textarea></p>
 <br>
 <p>Ohje:<br>
 <textarea name="instructions" rows="18" cols="40" maxlength="10000">
