Get right recipe data for recipe page

--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -1,6 +1,9 @@
+<a href="/recipes">takaisin</a>
 <h1> {{ name }} </h1>
 <p>
-<p>Annoksia: {{ serves }}, Valmistusaika {{ active }}, ({{ passive }})
+<p>Annoksia: {{ serves }} 
+<br>
+Valmistusaika {{ total }}h (aktiivista {{ active }}h, passiivista {{ passive }}h)
 <h3>Ainekset:</h3>
 ei ole vielä toiminnassa ainesten haku 
 <p>
