--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -1,3 +1,9 @@
+{% if session.user_id %}
+tähän toiminnallisuus joka lisää reseptin suosikkeihin
+<br>
+
+{% endif %}
+
 <a href="/recipes">takaisin</a>
 <h1> {{ name }} </h1>
 <p>
