--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -6,6 +6,7 @@ tähän toiminnallisuus joka lisää reseptin suosikkeihin
 
 <a href="/recipes">takaisin</a>
 <h1> {{ name }} </h1>
+<p>lisääjä: {{ creator }}</p>
 <p>
 <p>Annoksia: {{ serves }} 
 <br>
