--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,6 +5,7 @@
 <li> <a href="/recipes">Siirtyä selaamaan reseptejä</a>
 <li> <a href="/new">Luoda uuden reseptin</a>
 <li> <a href="/favourites">Selata omia suosikkeja</a>
+<li> <a href="/my_recipes">Selata omia reseptejä</a>
 <li> lisätä tai tutkailla omia tarvikkeita
 </ul>
 <p>
