--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+{% block content %}
+
 <title>Reseptisovellus</title>
 <h1>Tervetuloa!</h1>
 <a href="/recipes">reseptit</a>
@@ -5,12 +8,6 @@
 {% if session.user_id %}
 Olet kirjautunut sisään.
 <p>
-<a href="/welcome">oma sivu</a>
-<p>
-<a href="/logout">kirjaudu ulos</a>
-{% else %}
-<a href="/login">Kirjaudu sisään</a>
-<br>
-<a href="/register">Luo uusi käyttäjätunnus</a>
 {% endif %}
 
+{% endblock %}
