--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,5 @@
+{% extends "layout.html" %}
+{% block content %}
 <form action="/register" method="POST">
 <p>Uusi käyttäjätunnus</p>
 <p>
@@ -15,5 +17,4 @@ Anna salasana uudelleen:
 <input type="submit" value="Luo tunnus">
 </form>
 <p>
-<a href="/">Palaa etusivulle</a>
-
+{% endblock %}
