--- a/templates/new.html
+++ b/templates/new.html
@@ -5,25 +5,27 @@
 <form action="/new" method="POST">
   <p class="error">{{ error1 }}</p>
 nimi:
-<input type="text" name="name">
+<input type="text" name="name" value={{name}}>
 
 <br>
 <p class="error">{{ error2 }}</p>
-annoksia: <input type="number" name="serves">
+annoksia: <input type="number" name="serves" value={{serves}}>
 <br> 
 valmistusaika: 
-<input type="number" name="active" placeholder="aktiivinen">
+<input type="number" name="active" placeholder="aktiivinen" value={{active}}>
 <br>
-<input type="number" name="passive" placeholder="passiivinen" >
+<input type="number" name="passive" placeholder="passiivinen" value={{passive}}>
 <br>
 <p class="error">{{ error3 }}</p>
 <p>Ainekset:<br>
 <textarea name="incredients" rows="8" cols="40" maxlength="10000">
+{{incredients}}
 </textarea></p>
 <br>
 <p class="error">{{ error4 }}</p>
 <p>Ohje:<br>
 <textarea name="instructions" rows="18" cols="40" maxlength="10000">
+{{instructions}}
 </textarea></p>
 <input type="submit" value="Lähetä">
 </form>
