Add instructions for inserting incredients

--- a/templates/new.html
+++ b/templates/new.html
@@ -18,7 +18,8 @@ valmistusaika:
 <br>
 <p class="error">{{ error3 }}</p>
 <p>Ainekset:<br>
-<textarea name="incredients" rows="8" cols="40" maxlength="10000">
+  <p>Lisää ainekset muodossa määrä-pakkauskoko-nimi (esim 1-dl-vesi)</p>
+<textarea name="incredients" rows="8" cols="40" maxlength="10000" placeholder="1-litra-vesi">
 {{incredients}}
 </textarea></p>
 <br>
