--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,20 +1,23 @@
 
 {% extends "layout.html" %}
 {% block content %}
+<form action="/recipes" method="POST">
 <p>
 <h1>Reseptit</h1>
 <p>
 Tähän tulee hakutoiminto
 <br>
 <input type="text" name="incredient" placeholder="ainesosa"><input type="submit" value="Hae">
+<p class="error">{{ error }}</p>
 <br>
 tähän tulee linkkejä tuoteryhmiin
 <p>
-<h2>Kaikki reseptit:</h2>
+<h2>{{ list_heading }}</h2>
 <ul>
     {% for recipe in recipes %}
     <li><a href="/recipe/{{ recipe.id }}">{{ recipe.name }}</a>
     {% endfor %}
     </ul>
 <p>
+</form>
 {% endblock %}
