--- a/templates/users_recipes.html
+++ b/templates/users_recipes.html
@@ -1,8 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
 {% if session.user_id %}
-Hei !
-<h3>Käyttäjän {{ name }} {{ type }}reseptit:</h3>
+<br>
+<a href="/welcome">Palaa omalle sivulle</a> <a href="/new">Lisää uusi resepti</a>
+<h2>Käyttäjän {{ name }} {{ type }}reseptit:</h2>
 <ul>
     {% for r in recipes %}
     <li><a href="/recipe/{{ r.id }}">{{ r.name }}</a>
@@ -16,5 +17,4 @@ Tällä sivulla on kirjautuneen käyttäjän toimintoja.
 Vaikuttaisi siltä ettet ole <a href="/login">kirjautunut sisään</a>.
 <p>
 {% endif %}
-<a href="/welcome">Palaa omalle sivulle</a>
 {% endblock %}
