--- a/static/main.css
+++ b/static/main.css
@@ -82,3 +82,17 @@ footer {
   color: white;
   padding: 0.5rem;
 }
+
+.button {
+  background-color: #ff8c00;
+   border: none;
+  color: whitesmoke;
+   padding: 8px 10px;
+   text-align: center;
+  text-decoration: none;
+   display: inline-block;
+   font-size: 16px;
+   margin: 4px 4px;
+   cursor: pointer;
+   border-radius: 8px;
+ }
