--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -6,7 +6,7 @@
 <ul>
 <li> <a href="/recipes">Siirtyä selaamaan reseptejä</a>
 <li> <a href="/new">Luoda uuden reseptin</a>
-<li> <a href="/favourites">Selata omia suosikkeja</a>
+<li> <a href="/favorites">Selata omia suosikkeja</a>
 <li> <a href="/my_recipes">Selata omia reseptejä</a>
 <li> lisätä tai tutkailla omia tarvikkeita
 </ul>
