--- a/static/main.css
+++ b/static/main.css
@@ -31,7 +31,7 @@ td, th {
     border-style: solid;
     border-color: black;
     border-width: 1px;
-    padding: 0.5rem:
+    padding: 0.5rem
 }
 
 .header {
@@ -53,7 +53,7 @@ td, th {
   color: #ff8c00;
   text-align: right;
   margin: 25px;
-  grid-column: 2/3:
+  grid-column: 2/3;
   grid-row: 2;
 }
 
