Unify all buttons

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@ Anna käyttäjätunnus:
 Anna salasana:
 <input type="password" name="password">
 <p>
-<input type="submit" value="Kirjaudu">
+<input type="submit" class="button" value="Kirjaudu">
 </form>
 {% endblock %}
 
