--- a/templates/new.html
+++ b/templates/new.html
@@ -26,7 +26,7 @@ valmistusaika:
 <p>Ohje:<br>
 <textarea name="instructions" rows="18" cols="40" maxlength="10000">{{instructions}}
 </textarea></p>
-<input type="submit" value="Lähetä">
+<input type="submit" class="button" value="Lähetä">
 </form>
 <p>
 <a href="/welcome">Palaa takaisin</a>
