--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -7,7 +7,7 @@
 <p>
 Tähän tulee hakutoiminto
 <br>
-<input type="text" name="incredient" placeholder="ainesosa"><input type="submit" value="Hae">
+<input type="text" name="incredient" placeholder="ainesosa"><input type="submit" class="button" value="Hae">
 <p class="error">{{ error }}</p>
 <br>
 tähän tulee linkkejä tuoteryhmiin
