--- a/templates/register.html
+++ b/templates/register.html
@@ -14,7 +14,7 @@ Anna salasana:
 Anna salasana uudelleen:
 <input type="password" name="password2">
 <p>
-<input type="submit" value="Luo tunnus">
+<input type="submit" class="button" value="Luo tunnus">
 </form>
 <p>
 {% endblock %}
