--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,8 +10,8 @@
         <a href="/welcome" class="button">Oma sivu</a>
         <a href="/recipes" class="button">Reseptit</a>
         {% else %}
-        <a href="/login" class="button">Kirjaudu sisään</a>
-        <a href="/register" class="button">Luo uusi tunnus</a>
+        <a href="/login" class="button">Kirjaudu</a>
+        <a href="/register" class="button">Luo tunnus</a>
         <a href="/recipes" class="button">Reseptit</a>
         {% endif%}
         <br>
