--- a/templates/modify.html
+++ b/templates/modify.html
@@ -1,11 +1,44 @@
 {% extends "layout.html" %}
 {% block content %}
-Täällä voi muokata syöttämäänsä reseptiä
+<h1>Muokkaa reseptiä {{ recipe[1] }}</h1>
+
+<h3>Nimi</h3> <input type="text" name="r_name" class="input" value="{{ recipe[1] }}"><input type="submit" name="name" class="button" value="Muuta">
+<h3>Annoksia</h3> <input type="number" name="t_active" class="input" value="{{ recipe[4] }}"><input type="submit" name="serves" class="button" value="Muuta">
+<h3>Valmistusaika</h3>
+Aktiivinen: <input type="number" step=".01" name="t_active" class="input" value="{{ recipe[5] }}"><input type="submit" name="active" class="button" value="Muuta">
 <br>
-nimi = {{ recipe[1] }}
+Passiivinen: <input type="number" step=".01" name="t_passive" class="input" value="{{ recipe[6] }}"><input type="submit" name="passive" class="button" value="Muuta">
 <br>
-ohje = {{ recipe[2] }}
+<h3>Ainekset</h3>
+* ainekset tähän *
+<ul id="list">
+    {% for inc in incs %}
+    <li> <input type="text" name="r_inc" class="input" value="inc[0]">
+        <input type="text" name="r_inc" class="input" value="inc[1]">
+        <input type="text" name="r_inc" class="input" value="inc[2]"><input type="submit" name="inc" class="button" value="Muuta">
+    {% endfor %}
+    <li> <input type="number" style="width: 4em" name="r_inc" class="input" placeholder="määrä">
+        <input type="text" size="6" name="r_inc" class="input" placeholder="mittayks.">
+        <input type="text" name="r_inc" class="input" placeholder="nimi"><input type="submit" name="new_inc" class="button" value="Lisää">
+</ul>
+
+
 <br>
-jne
+<h4>Ohje</h4>
+<textarea name="instructions" rows="9" cols="40" maxlength="10000">{{recipe[3]}}
+</textarea><input type="submit" name="instructions" class="button" value="Muuta">
+<br>
+<h4>Lisää tagejä</h4>
+<ul id="list">
+    {% for tag in tags %}
+    <li> <input type="text" name="r_tag" class="input" value="tag"><input type="submit" name="tag" class="button" value="Muuta">
+    {% endfor %}
+    <li> <input type="text" name="r_tag" class="input" placeholder="uusi"><input type="submit" name="new_tag" class="button" value="Lisää">
+</ul>
+<br>
+<br>
+<input type="submit" name="rady" class="button" value="Valmis">
+<br>
+<br>
 {% endblock %}
 
