Username verification fixes

--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 <p>
 <p class="error">{{ e_name }}</p>
 <p>
-Anna nimimerkki: <input type="text" name="username">
+Anna nimimerkki: <input type="text" name="username" value="{{name}}">
 <p>
 <p class="error">{{ e_match }}{{ e_length }}</p>
 Anna salasana: <input type="password" name="password1">
